<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help"
            android:icon="@drawable/ic_live_help_black_24dp"/>
    </group>
</menu>
