<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_reg_background"
    tools:context=".authentication.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="@null"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/regText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/overlock_sc"
            android:text="@string/register"
            android:textColor="@color/colorBlack"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_white_rectangle"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="#A9000000"
            android:textSize="14sp"
            tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_white_rectangle"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="#A9000000"
            android:textSize="14sp"
            tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_white_rectangle"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lineSpacingExtra="10sp"
            android:paddingLeft="16dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="#A9000000"
            android:textSize="14sp"
            tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_rectangle_text"
            android:text="Sign Up"
            android:textAllCaps="false"
            tools:ignore="HardcodedText" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>